# llm_recepies

./: LICENSE  README.md  pyproject.toml
Basics/: prompt_template.py
